SDKs/apideck.com/vault/8.85.0/java/README.md
# openapisdk

<!-- Start SDK Installation -->
## SDK Installation

### Gradle

```groovy
implementation 'openapisdk:openapisdk:0.0.1'
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```java
package hello.world;

import openapisdk.SDK;
import openapisdk.models.shared.Security;

public class Application {
    public static void main(String[] args) {
        try {
            SDK.Builder builder = SDK.builder();

            builder.setSecurity(
                new Security() {{
                    apiKey = new SchemeApiKey() {{
                        apiKey = "YOUR_API_KEY_HERE";
                    }};
                    applicationId = new SchemeApplicationId() {{
                        apiKey = "YOUR_API_KEY_HERE";
                    }};
                }}
            );

            SDK sdk = builder.build();

            ConnectionSettingsAllRequest req = new ConnectionSettingsAllRequest() {{
                security = new ConnectionSettingsAllSecurity() {{
                    apiKey = new SchemeApiKey() {{
                        apiKey = "YOUR_API_KEY_HERE";
                    }};
                }};
                pathParams = new ConnectionSettingsAllPathParams() {{
                    resource = "sit";
                    serviceId = "voluptas";
                    unifiedApi = "culpa";
                }};
                headers = new ConnectionSettingsAllHeaders() {{
                    xApideckAppId = "expedita";
                    xApideckConsumerId = "consequuntur";
                }};
            }};

            ConnectionSettingsAllResponse res = sdk.connections.connectionSettingsAll(req);

            if (res.getConnectionResponse.isPresent()) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### Connections

* `connectionSettingsAll` - Get resource settings
* `connectionSettingsUpdate` - Update settings
* `connectionsAdd` - Create connection
* `connectionsAll` - Get all connections
* `connectionsCallback` - Callback
* `connectionsDelete` - Deletes a connection
* `connectionsImport` - Import connection
* `connectionsOne` - Get connection
* `connectionsRevoke` - Revoke connection
* `connectionsToken` - Get Access Token
* `connectionsUpdate` - Update connection

### Consumers

* `consumerRequestCountsAll` - Consumer request counts
* `consumersAll` - Get all consumers
* `consumersOne` - Get consumer

### Logs

* `logsAll` - Get all consumer request logs

### Sessions

* `sessionsCreate` - Create Session

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
